# discogs-tag.py

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
src/discogs_tag/: cli.py
tests/: 16215626.json  17717578.json  18051880.json  21343819.json  32990205.json  8582788.json  test_discogs_tag.py
