[tool.poetry]
name = "discogs-tag"
version = "0.4.1"
description = "A rudimentary audio tagger based on Discogs metadata."
authors = ["infojunkie <karim.ratib@gmail.com>"]
readme = "README.md"
packages = [{include = "discogs_tag", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
fire = "^0.5.0"
mutagen = "^1.46.0"
importlib-metadata = "^6.8.0"
pathvalidate = "^3.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-mock = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
discogs-tag = "discogs_tag.cli:cli"

[tool.pytest.ini_options]
pythonpath = "src"
